test/error/parse/ExpectRecord.mod
MODULE ExpectRecord;
TYPE P = POINTER TO ARRAY 1 OF INTEGER;
END ExpectRecord.
